# ryuuji

./: .gitignore  127.0.0.1_1111-20260212T142740.html  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md  ryuuji.umaru.dev_2026-02-12_14-00-27.html
.github/workflows/: ci.yml  deploy-website.yml  release.yml  tauri-ci.yml
apps/ryuuji-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/ryuuji-tauri/src-tauri/capabilities/: default.json
apps/ryuuji-tauri/src-tauri/src/: lib.rs  main.rs
apps/ryuuji-tauri/ui/: Cargo.toml  Trunk.toml  index.html
apps/ryuuji-tauri/ui/src/: lib.rs
bucket/: ryuuji.json
config/: default.toml
crates/kurozumi-api/: Cargo.toml
crates/kurozumi-api/src/: anilist.rs  traits.rs
crates/kurozumi-api/src/anilist/: auth.rs  client.rs  error.rs  mod.rs  types.rs
crates/kurozumi-api/src/kitsu/: mod.rs
crates/kurozumi-api/src/mal/: auth.rs  client.rs  types.rs
crates/kurozumi-core/: Cargo.toml
crates/kurozumi-core/src/: config.rs  error.rs  lib.rs  matcher.rs  orchestrator.rs  recognition.rs  relations.rs  storage.rs  torrent.rs
crates/kurozumi-core/src/models/: anime.rs  detection.rs  library.rs  mod.rs
crates/kurozumi-core/src/torrent/: engine.rs  filter.rs  matcher.rs  mod.rs  rss.rs
crates/kurozumi-detect/: Cargo.toml
crates/kurozumi-detect/data/: players.toml  streams.toml
crates/kurozumi-detect/examples/: detect.rs
crates/kurozumi-detect/src/: lib.rs  player_db.rs  players.rs  stream.rs
crates/kurozumi-detect/src/platform/: linux.rs  mod.rs  windows.rs
crates/kurozumi-gui/: Cargo.toml
crates/kurozumi-gui/assets/themes/: default-dark.toml  default-light.toml
crates/kurozumi-gui/src/: app.rs  cover_cache.rs  db.rs  format.rs  main.rs  screen.rs  style.rs  subscription.rs  theme.rs  window_state.rs
crates/kurozumi-gui/src/pages/: library.rs  mod.rs  now_playing.rs  settings.rs
crates/kurozumi-gui/src/screen/: history.rs  library.rs  mod.rs  now_playing.rs  search.rs  seasons.rs  settings.rs  torrents.rs
crates/kurozumi-gui/src/theme/: catalog.rs  colors.rs  mod.rs
crates/kurozumi-gui/src/widgets/: anime_list_item.rs  context_menu.rs  detail_panel.rs  mod.rs  modal.rs  rounded_cover.rs  stepper.rs
crates/kurozumi-parse/: Cargo.toml
crates/kurozumi-parse/src/: elements.rs  keyword.rs  lib.rs  parser.rs  tokenizer.rs
crates/kurozumi-parse/src/parser/: episode.rs  mod.rs
crates/ryuuji-api/: Cargo.toml
crates/ryuuji-api/src/: lib.rs  mal.rs  traits.rs
crates/ryuuji-api/src/anilist/: auth.rs  client.rs  types.rs
crates/ryuuji-api/src/kitsu/: auth.rs  client.rs  error.rs  mod.rs  types.rs
crates/ryuuji-api/src/mal/: auth.rs  client.rs  error.rs  types.rs
crates/ryuuji-core/: Cargo.toml
crates/ryuuji-core/src/: config.rs  debug_log.rs  error.rs  lib.rs  matcher.rs  normalize.rs  orchestrator.rs  recognition.rs  relations.rs  scanner.rs  storage.rs  updater.rs
crates/ryuuji-core/src/models/: library.rs
crates/ryuuji-core/src/torrent/: engine.rs  matcher.rs  models.rs  rss.rs
crates/ryuuji-detect/: Cargo.toml
crates/ryuuji-detect/data/: players.toml  streams.toml
crates/ryuuji-detect/examples/: detect.rs
crates/ryuuji-detect/src/: lib.rs  platform.rs  player_db.rs  stream.rs
crates/ryuuji-detect/src/platform/: windows_smtc.rs
crates/ryuuji-gui/: Cargo.toml  build.rs
crates/ryuuji-gui/assets/: ryuuji.desktop
crates/ryuuji-gui/assets/themes/: anilist.toml  catppuccin.toml  default-dark.toml  default-light.toml  default.toml  gruvbox.toml  kitsu.toml  monokai-ristretto.toml  myanimelist-blue.toml  myanimelist.toml  nord.toml  onyx.toml  osaka-jade.toml  rose-pine.toml  tokyo-night.toml
crates/ryuuji-gui/src/: app.rs  cover_cache.rs  db.rs  discord.rs  keyboard.rs  main.rs  screen.rs  style.rs  subscription.rs  theme.rs  toast.rs  widgets.rs  window_state.rs
crates/ryuuji-gui/src/screen/: debug.rs  history.rs  library.rs  now_playing.rs  search.rs  seasons.rs  settings.rs  stats.rs  torrents.rs
crates/ryuuji-gui/src/theme/: catalog.rs  colors.rs
crates/ryuuji-gui/src/widgets/: anime_card.rs  anime_list_item.rs  detail_panel.rs  empty_state.rs  form_row.rs  modal.rs  stepper.rs
crates/ryuuji-parse/: Cargo.toml
crates/ryuuji-parse/src/: elements.rs  keyword.rs  parser.rs
crates/ryuuji-parse/src/parser/: season.rs  title.rs
crates/ryuuji-runtime/: Cargo.toml
crates/ryuuji-runtime/src/: db.rs  lib.rs
crates/ryuuji-wasm/: Cargo.toml
crates/ryuuji-wasm/src/: lib.rs
docs/: prd.md
docs/decisions/: 0001-mal-oauth2-pkce-without-oauth2-crate.md  0002-mal-config-owned-client-id.md  0003-mal-form-encoded-patch-and-api-quirks.md
docs/plans/: 2026-02-17-debug-dashboard-design.md  2026-02-17-debug-dashboard.md
migrations/: 001_initial.sql  002_add_anime_metadata.sql  003_torrent_tables.sql  004_add_library_fields.sql  005_add_available_episodes.sql
packaging/windows/: installer.nsi
web/content/: _index.md
web/content/overview/: _index.pt-br.md
web/sass/: _layout.scss  _reset.scss  _sections.scss
web/static/wasm/: ryuuji_wasm_bg.wasm
web/templates/: base.html  home.html  overview.html
website/: config.toml
website/content/: _index.md  _index.pt-br.md
website/content/overview/: _index.md  _index.pt-br.md
website/public/: main.css
website/sass/: _components.scss  _layout.scss  _reset.scss  _sections.scss  _typography.scss  _variables.scss  main.scss
website/static/: CNAME  robots.txt
website/static/wasm/: ryuuji_wasm.js
website/templates/: base.html  home.html  index.html  macros.html  overview.html
