[workspace]
resolver = "2"
members = [
    "crates/kurozumi-core",
    "crates/kurozumi-detect",
    "crates/kurozumi-parse",
    "crates/kurozumi-api",
    "crates/kurozumi-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/user/kurozumi"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
toml = "0.8"
directories = "5"

# OS integration
dark-light = "2"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# RSS & URL
rss = "2"
url = "2"

# Internal crates
kurozumi-core = { path = "crates/kurozumi-core" }
kurozumi-detect = { path = "crates/kurozumi-detect" }
kurozumi-parse = { path = "crates/kurozumi-parse" }
kurozumi-api = { path = "crates/kurozumi-api" }
