[workspace]
resolver = "2"
members = [
    "crates/ryuuji-core",
    "crates/ryuuji-detect",
    "crates/ryuuji-parse",
    "crates/ryuuji-api",
    "crates/ryuuji-gui",
    "crates/ryuuji-runtime",
    "crates/ryuuji-wasm",
    "apps/ryuuji-tauri/src-tauri",
]
default-members = [
    "crates/ryuuji-core",
    "crates/ryuuji-detect",
    "crates/ryuuji-parse",
    "crates/ryuuji-api",
    "crates/ryuuji-gui",
    "crates/ryuuji-runtime",
    "apps/ryuuji-tauri/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/user/ryuuji"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
toml = "0.8"
directories = "5"

# OS integration
dark-light = "2"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# RSS & URL
rss = "2"
url = "2"

# WASM
wasm-bindgen = "0.2"

# Internal crates
ryuuji-core = { path = "crates/ryuuji-core" }
ryuuji-detect = { path = "crates/ryuuji-detect" }
ryuuji-parse = { path = "crates/ryuuji-parse" }
ryuuji-api = { path = "crates/ryuuji-api" }
ryuuji-runtime = { path = "crates/ryuuji-runtime" }
