[package]
name = "kurozumi-core"
version.workspace = true
edition.workspace = true

[dependencies]
kurozumi-detect = { workspace = true }
kurozumi-parse = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
fuzzy-matcher = "0.3"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { workspace = true }
rss = { workspace = true }
url = { workspace = true }
