[package]
name = "kurozumi-gui"
version.workspace = true
edition.workspace = true

[dependencies]
kurozumi-core = { workspace = true }
kurozumi-detect = { workspace = true }
kurozumi-parse = { workspace = true }
kurozumi-api = { workspace = true }

iced = { version = "0.14", features = ["tokio", "tiny-skia", "advanced"] }
iced_aw = { version = "0.13", default-features = false, features = [
    "number_input",
    "card",
    "context_menu",
] }
lucide-icons = { version = "0.563", features = ["iced"] }
dark-light = { workspace = true }
directories = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
