[package]
name = "ryuuji-api"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
oauth2 = "4"
graphql_client = "0.14"
chrono = { version = "0.4", features = ["serde"] }
open = "5"
url = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
