[package]
name = "ryuuji-tauri"
version.workspace = true
edition.workspace = true

[lib]
name = "ryuuji_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ryuuji-runtime = { workspace = true }
ryuuji-core = { workspace = true }
ryuuji-api = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
